data/forge_javadoc/1.7.10/raw/net/minecraft/client/model/ModelBase.md
---
title: "ModelBase"
description: "public abstract class ModelBase extends java.lang.Object"
package: "net/minecraft/client/model"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/model/ModelBase.html"
sourceType: javadoc
---

# ModelBase

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase

## Class signature

```java
public abstract class ModelBase extends java.lang.Object
```

## Constructors

- `ModelBase()`

## Methods

- `ModelRenderer getRandomModelBox(java.util.Random p_85181_1_)`
- `TextureOffset getTextureOffset(java.lang.String p_78084_1_)`
- `void render(Entity p_78088_1_, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float p_78088_7_)`
- `void setLivingAnimations(EntityLivingBase p_78086_1_, float p_78086_2_, float p_78086_3_, float p_78086_4_)`
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity p_78087_7_)`
- `protected void setTextureOffset(java.lang.String p_78085_1_, int p_78085_2_, int p_78085_3_)`

## Fields

- `java.util.List boxList`
- `boolean isChild`
- `boolean isRiding`
- `float onGround`
- `int textureHeight`
- `int textureWidth`
